--- a/css/elgantsweetsstyle.css
+++ b/css/elgantsweetsstyle.css
@@ -65,12 +65,15 @@ head
     font-size: 80px;
     color: white;
     text-align: center;
+    margin: 0%;
 }
 
 .description-text-container
 {
     text-align: center;
     padding-top: 8%;
+    padding-bottom: 0%;
+    margin: 0%;
 }
 
 body {
@@ -145,4 +148,92 @@ footer
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-bottom: 10px;
+}
+
+footer
+{
+    background-color: rgb(243, 243, 243);
+    padding-bottom: 20%;
+    margin-bottom: 0%;
+}
+
+.footer-copyright
+{
+    padding: 0%;
+    margin: 0%;
+    width: 100%;
+    color: black;
+}
+
+.copyright-container
+{
+    background-color: rgb(243, 243, 243);
+    padding: 0%;
+    margin-top: 0%;
+    width: 100%;
+    text-align: center;
+}
+
+.footer-image
+{
+    opacity: 0%;
+}
+
+.footer-block1
+{
+    padding-left: 9%;
+    padding-top: 7%;
+    float: left;
+}
+
+.footer-block2
+{
+    float: left;
+    padding-top: 6%;
+    font-size: 25px;
+    font-family: Poppins, sans-serif;
+}
+
+.footer-block3
+{
+    float: left;
+    padding-top: 6%;
+    font-size: 25px;
+    font-family: Poppins, sans-serif;
+    padding-left: 3%;
+}
+
+.footer-block4
+{
+    float: left;
+    padding-top: 6%;
+    font-size: 25px;
+    font-family: Poppins, sans-serif;
+    padding-left: 3%;
+}
+
+.twitter-icon
+{
+    padding-top: 2%;
+    padding-right: 9%;
+    float: left;
+    padding-left: 20%;
+}
+
+.youtube-icon
+{
+    padding-top: 2%;
+    padding-right: 2%;
+    float: left;
+}
+
+.Catering-container
+{
+    padding-top: 5%;
+    font-size: 20px;
+}
+
+.catering
+{
+    color: black;
 }
