--- a/css/elgantsweetsstyle.css
+++ b/css/elgantsweetsstyle.css
@@ -144,7 +144,7 @@ body {
 
 footer
 {
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(201 201 201));
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-bottom: 20%;
