--- a/css/elegantbitcateringstyle.css
+++ b/css/elegantbitcateringstyle.css
@@ -1,11 +1,18 @@
 .head-container
 {
     text-align: center;
-    background-color: #fff;
+    background-color: transparent;
     white-space: nowrap;
     margin: 0px 0px 0px 0%;
     margin-bottom: 10%;
     height: 160px;
+}
+.logo-text
+{
+    color: white;
+    background-color: transparent;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 head
 {
@@ -20,20 +27,9 @@ head
     margin: 0px 0px 0px 0px;
     border: 0px;
     font-family: 'Courier New', Courier, monospace, bold;
-    font-size: 60px;
-    
-}
-.links
-{
-    float: center;
-    text-align: center;
-    margin-top: 0px;
-    padding: 50px;
-    float: right;
-}
-.elegantsweets-container
-{
-    background-color: transparent;
+    font-size: 40px;
+    color: white;
+    text-decoration: none;
 }
 .fattoamano-button
 {
@@ -42,11 +38,29 @@ head
     margin: 0px 0px 0px 0px;
     border: 0px;
     font-family: 'Courier New', Courier, monospace, bold;
-    font-size: 60px;
+    font-size: 40px;
+    color: white;
+    text-decoration: none;
 }
+.links
+{
+    float: center;
+    text-align: center;
+    margin-top: 0px;
+    padding: 50px;
+    float: right;
+    text-decoration: none;
+}
+.elegantsweets-container
+{
+    background-color: transparent;
+    text-decoration: none;
+}
+
 .fattoamano-container
 {
     background-color: transparent;
+    text-decoration: none;
 }
 
 body {
@@ -58,12 +72,13 @@ body {
 }
 
 .logo {
-    padding: 0px;
-    background: #fff;
-    color: #fff;
-    font-size: 30px;
+    padding: 50px;
+    background: transparent;
+    color: transparent;
+    font-size: 50px;
     margin: 0px 0px 0px 30px;
     float: left;
+    text-align: center;
     
 }
 
@@ -113,8 +128,90 @@ body {
 
 footer
 {
-    background-color: #fff;
+    background-color: rgb(243, 243, 243);
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-bottom: 10px;
+    padding-bottom: 20%;
+    margin-bottom: 0%;
+}
+
+.footer-copyright
+{
+    padding: 0%;
+    margin: 0%;
+    width: 100%;
+    color: black;
+}
+
+.copyright-container
+{
+    background-color: rgb(243, 243, 243);
+    padding: 0%;
+    margin-top: 0%;
+    width: 100%;
+    text-align: center;
+}
+
+.footer-image
+{
+    opacity: 0%;
+}
+
+.footer-block1
+{
+    padding-left: 9%;
+    padding-top: 7%;
+    float: left;
+}
+
+.footer-block2
+{
+    float: left;
+    padding-top: 6%;
+    font-size: 25px;
+    font-family: Poppins, sans-serif;
+}
+
+.footer-block3
+{
+    float: left;
+    padding-top: 6%;
+    font-size: 25px;
+    font-family: Poppins, sans-serif;
+    padding-left: 3%;
+}
+
+.footer-block4
+{
+    float: left;
+    padding-top: 6%;
+    font-size: 25px;
+    font-family: Poppins, sans-serif;
+    padding-left: 3%;
+}
+
+.twitter-icon
+{
+    padding-top: 2%;
+    padding-right: 9%;
+    float: left;
+    padding-left: 20%;
+}
+
+.youtube-icon
+{
+    padding-top: 2%;
+    padding-right: 2%;
+    float: left;
+}
+
+.Catering-container
+{
+    padding-top: 5%;
+    font-size: 20px;
+}
+
+.catering
+{
+    color: black;
 }
