--- a/css/elegantbitcateringstyle.css
+++ b/css/elegantbitcateringstyle.css
@@ -7,16 +7,35 @@
     margin-bottom: 10%;
     height: 160px;
 }
+.logo {
+    padding: 50px;
+    background: transparent;
+    color: transparent;
+    margin: 0px 0px 0px 30px;
+    float: left;
+    text-align: center;
+    
+}
 .logo-text
 {
     color: white;
     background-color: transparent;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    border-color: transparent;
+    font-size: 320%;
+    position: relative;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
-head
+
+.logo-text:hover
 {
-    margin: 0px;
+    cursor: pointer;
+}
+header
+{
+    margin: 0%;
     background-color: transparent;
 
 }
@@ -27,9 +46,16 @@ head
     margin: 0px 0px 0px 0px;
     border: 0px;
     font-family: 'Courier New', Courier, monospace, bold;
-    font-size: 40px;
+    font-size: 250%;
     color: white;
     text-decoration: none;
+    position: relative;
+    margin-right: 2%;
+}
+.elegantsweets-button:hover
+{
+    cursor: pointer;
+    color: rgb(201, 201, 201);
 }
 .fattoamano-button
 {
@@ -38,9 +64,15 @@ head
     margin: 0px 0px 0px 0px;
     border: 0px;
     font-family: 'Courier New', Courier, monospace, bold;
-    font-size: 40px;
+    font-size: 250%;
     color: white;
     text-decoration: none;
+    position: relative;
+}
+.fattoamano-button:hover
+{
+    cursor: pointer;
+    color: rgb(201, 201, 201);
 }
 .links
 {
@@ -71,21 +103,12 @@ body {
     background-image: url("https://images.unsplash.com/photo-1518619745898-93e765966dcd?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2F0ZXJpbmd8ZW58MHx8MHx8fDA%3D");
 }
 
-.logo {
-    padding: 50px;
-    background: transparent;
-    color: transparent;
-    font-size: 50px;
-    margin: 0px 0px 0px 30px;
-    float: left;
-    text-align: center;
-    
-}
-
 .description-text
 {
-    font-family: 'Courier New', Courier, monospace, bold;
-    font-size: 80px;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 500%;
     color: white;
     text-align: center;
 }
@@ -96,122 +119,221 @@ body {
     padding-top: 8%;
 }
 
-.bottom-container
+.middle-container
 {
-    background-color: #fff;
-    margin-top: 20%;
+    background-color: rgb(228 225 229);
+    margin-top: 24%;
     height: 50%;
 }
-.contact-container
+
+.businesses
 {
-    font-family: 'Courier New', Courier, monospace, bold;
-    font-size: 30px;
+    background-color: rgba(214, 203, 192, 0.164);
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.bis-text
+{
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    margin-left: 30px;
+    font-size: 40px;
+    color: rgba(39, 39, 39, 0.911);
+}
+
+.needs
+{
+    background-color: rgb(44, 71, 46);
+    padding-top: 2%;
+    padding-bottom: 35%;
+}
+
+.nh-text
+{
+    font-family: "quiche-stencil", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 100px;
+    color: white;
+}
+
+.needs-container
+{
+    float: right;
+    margin-top: 5%;
+    padding-right: 10%;
+}
+
+.ways-container
+{
+    padding-left: 10%;
+    margin-top: 2%;
+}
+
+.ways-text
+{
+    font-family: "quiche-stencil", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 50px;
+    color: rgb(216, 216, 147);
+}
+
+.needs-logo
+{
+    float: left;
+    margin-top: 30%;
+    padding-left: 9%;
+}
+
+.n-logo
+{
+    border-color: transparent;
+    background-color: transparent;
+    font-family: "quiche-stencil", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    color: white;
+    font-size: 20px;
+}
+
+.n-logo:hover
+{
+    cursor: pointer;
+}
+
+.contact
+{
+    padding-bottom: 10%;
+    background-color: rgb(228 225 229);
     text-align: center;
 }
-.contactus-container
+
+.contact-text
 {
-    padding: 10px;
-    padding-top: 7%;
+    color: rgb(27, 27, 27);
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 100px;
 }
-.email-container
+
+.ct-container
 {
-    padding: 10px;
+    padding-top: 5%;
 }
-.withphone-container
+
+.ct-info
 {
-    padding: 10px;
-}
-.phonenumber-contianer
-{
-    padding: 10px;
+    opacity: 50%;
+    margin-top: 20px;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 50px;
 }
 
 footer
 {
-    background-color: rgb(243, 243, 243);
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-bottom: 20%;
-    margin-bottom: 0%;
+    background-color: rgb(179, 179, 179);
+    padding-top: 10%;
+    padding-bottom: 5%;
+    white-space: nowrap;
 }
 
-.footer-copyright
+.footer-logo
 {
-    padding: 0%;
-    margin: 0%;
-    width: 100%;
-    color: black;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 50px;
+    padding-top: 10%;
+    color: white;
+    
 }
 
-.copyright-container
+.fl-container
 {
-    background-color: rgb(243, 243, 243);
-    padding: 0%;
-    margin-top: 0%;
-    width: 100%;
-    text-align: center;
-}
-
-.footer-image
-{
-    opacity: 0%;
-}
-
-.footer-block1
-{
-    padding-left: 9%;
-    padding-top: 7%;
+    padding-left: 5%;
     float: left;
 }
 
-.footer-block2
+.footer-links
 {
-    float: left;
-    padding-top: 6%;
-    font-size: 25px;
-    font-family: Poppins, sans-serif;
+    float: center;
+    padding-left: 45%;
 }
 
-.footer-block3
+.links-text
 {
-    float: left;
-    padding-top: 6%;
-    font-size: 25px;
-    font-family: Poppins, sans-serif;
-    padding-left: 3%;
+    color: white;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
+    padding-left: 1%;
 }
 
-.footer-block4
+.fl-infob
 {
-    float: left;
-    padding-top: 6%;
-    font-size: 25px;
-    font-family: Poppins, sans-serif;
-    padding-left: 3%;
+    color: white;
+    border-color: transparent;
+    background-color: transparent;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 18px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
-.twitter-icon
+.fl-infob:hover
 {
-    padding-top: 2%;
-    padding-right: 9%;
-    float: left;
-    padding-left: 20%;
+    cursor: pointer;
 }
 
-.youtube-icon
+.footer-contact
 {
-    padding-top: 2%;
-    padding-right: 2%;
-    float: left;
+    float: right;
+    padding-right: 10%;
 }
 
-.Catering-container
+.fc-text
 {
-    padding-top: 5%;
+    color: white;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     font-size: 20px;
 }
 
-.catering
+.fcontact-info
 {
-    color: black;
+    color: white;
+    font-family: "kohinoor-odia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.copyright
+{
+    border-color: transparent;
+    background-color: transparent;
+    padding-top: 5%;
+    
+}
+
+.copyright:hover
+{
+    cursor: pointer;
+}
+
+.copy-container
+{
+    padding-left: 4.6%;
 }
