--- a/css/fattoamanolocation.css
+++ b/css/fattoamanolocation.css
@@ -54,7 +54,7 @@
 body
 {
     margin: 0;
-    background-image: url("https://cdn.discordapp.com/attachments/1093303363036250152/1207516146878648330/Artboard_1.png?ex=65dfee0b&is=65cd790b&hm=a23b7cbb0f769584c5004fd07753d4f01d4b6d499bbf750c8be9c068155395c2&");
+    background-image: url("https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/Artboard_1.png?raw=true");
 }
 
 .b1
