--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -1,3 +1,68 @@
+@media only screen and (max-width: 800px){
+    .footer-links
+    {
+        display: none;
+        visibility: hidden;
+    }
+    footer
+    {
+        padding-bottom: 30% !important;
+    }
+}
+
+
+@media only screen and (max-width: 650px){
+    .logo-container
+    {
+        display: none;
+        visibility: hidden;
+    }
+    .links
+    {
+        padding-right: 0% !important;
+    }
+    .b2-mm-text
+    {
+        font-size: 20px !important;
+    }
+    .b2-t-text
+    {
+        font-size: 20px !important;
+    }
+    .toppings-text
+    {
+        font-size: 30px !important;
+    }
+    .drinks-text
+    {
+        font-size: 30px !important;
+    }
+    .pizza-text
+    {
+        font-size: 50px !important;
+    }
+}
+
+@media only screen and (max-width: 480px){
+    footer
+    {
+        display: none;
+        visibility: hidden;
+    }
+    .b1-text
+    {
+        font-size: 50px !important;
+    }
+    .location-button
+    {
+        display: none;
+        visibility: hidden;
+    }
+}
+
+
+
+
 .logo-container {
     margin-top: 20px;
     margin-left: 30px;
