--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -60,9 +60,6 @@
     }
 }
 
-
-
-
 .logo-container {
     margin-top: 20px;
     margin-left: 30px;
@@ -70,7 +67,7 @@
     color: transparent;
     float: left;
     text-align: center;
-    
+    width: 100px;
 }
 .links
 {
@@ -255,6 +252,7 @@ footer
 {
     padding-left: 10%;
     float: left;
+    width: 100px;
 }
 
 .footer-links
