--- a/css/fattoamanolocation.css
+++ b/css/fattoamanolocation.css
@@ -1,3 +1,14 @@
+@media only screen and (max-width: 1400px){
+    .b2
+    {
+        padding-bottom: 20% !important;
+    }
+    .gmap-container
+    {
+        margin-left: 15% !important;
+    }
+}
+
 .logo-container {
     margin-top: 20px;
     margin-left: 30px;
