--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 1400px){
+    .b2
+    {
+        padding-bottom: 5% !important;
+    }
+}
+
 @media only screen and (max-width: 800px){
     .footer-links
     {
