--- a/css/fattoamanolocation.css
+++ b/css/fattoamanolocation.css
@@ -1,14 +1,13 @@
 @media only screen and (max-width: 1400px){
     .b2
     {
-        padding-bottom: 20% !important;
+        padding-bottom: 2% !important;
     }
     .gmap-container
     {
         margin-left: 15% !important;
     }
 }
-
 .logo-container {
     margin-top: 20px;
     margin-left: 30px;
@@ -16,6 +15,7 @@
     color: transparent;
     float: left;
     text-align: center;
+    width: 100px;
     
 }
 .links
@@ -167,6 +167,7 @@ footer
 {
     padding-left: 10%;
     float: left;
+    width: 100px;
 }
 
 .footer-links
