padding to the bottom of menu

--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -5,6 +5,13 @@
     }
 }
 
+@media only screen and (max-width: 1300px){
+    .b2
+    {
+        padding-bottom: 10% !important;
+    }
+}
+
 @media only screen and (max-width: 800px){
     .footer-links
     {
