--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -8,7 +8,7 @@
 @media only screen and (max-width: 1300px){
     .b2
     {
-        padding-bottom: 10% !important;
+        margin-bottom: 10% !important;
     }
 }
 
