--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -5,7 +5,7 @@
     }
 }
 
-@media only screen and (max-width: 1500px){
+@media only screen and (min-width: 1500px){
     .b2
     {
         margin-bottom: 10% !important;
