--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -8,7 +8,7 @@
 @media only screen and (min-width: 1500px){
     .b2
     {
-        margin-bottom: 10% !important;
+        padding-bottom: 10% !important;
     }
 }
 
