--- a/css/fattoamanomenu.css
+++ b/css/fattoamanomenu.css
@@ -1,15 +1,3 @@
-@media only screen and (max-width: 1400px){
-    .b2
-    {
-        padding-bottom: 0% !important;
-    }
-    footer
-    {
-        padding-top: 5% !important;
-    }
-}
-
-
 @media only screen and (max-width: 800px){
     .footer-links
     {
@@ -173,6 +161,7 @@ body
     height: 220%;
     margin: 0;
     margin-top: 14%;
+    padding-bottom: 2%;
 }
 
 .pizza-text
