Changed background link for sweets

--- a/css/elgantsweetsstyle.css
+++ b/css/elgantsweetsstyle.css
@@ -90,7 +90,7 @@ body {
     margin: 0;
     background-size: 100%;
     background-attachment: fixed;
-    background-image: url("https://images.pexels.com/photos/1126359/pexels-photo-1126359.jpeg?cs=srgb&dl=pexels-suzy-hazelwood-1126359.jpg&fm=jpg");
+    background-image: url("https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/pexels-suzy-hazelwood-1126359.jpg?raw=true");
 }
 .priceing-container
 {
