Better Footer and Fixes

--- a/css/fattoamano.css
+++ b/css/fattoamano.css
@@ -307,7 +307,7 @@ body
 
 footer
 {
-    background-color: rgb(179, 179, 179);
+    background: #111111 url(https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/bg-texture-on-blue.png?raw=true);
     padding-top: 10%;
     padding-bottom: 8%;
     white-space: nowrap;
@@ -395,6 +395,7 @@ footer
 {
     border-color: transparent;
     background-color: transparent;
+    color: white;
 }
 
 .copy-container
@@ -408,6 +409,5 @@ footer
 {
     cursor: pointer;
 }
-
 
 
