--- a/css/fattoamanolocation.css
+++ b/css/fattoamanolocation.css
@@ -204,7 +204,7 @@ body
 
 footer
 {
-    background-color: rgb(179, 179, 179);
+    background: #111111 url(https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/bg-texture-on-blue.png?raw=true);
     padding-top: 10%;
     padding-bottom: 8%;
     white-space: nowrap;
@@ -219,6 +219,7 @@ footer
     padding-top: 10%;
     color: white;
     position: absolute;
+    width: 10px;
 }
 
 .fl-container
@@ -291,6 +292,7 @@ footer
 {
     border-color: transparent;
     background-color: transparent;
+    color: white;
 }
 
 .copy-container
