--- a/css/fattoamanolocation.css
+++ b/css/fattoamanolocation.css
@@ -187,7 +187,7 @@ body
 
 .gmap-container
 {
-    width: 1000px;
+    width: 50%;
     border-radius: 5%;
     justify-items: center;
     text-align: right;
@@ -306,3 +306,4 @@ footer
 {
     cursor: pointer;
 }
+
