--- a/css/elegantbitecateringstyle.css
+++ b/css/elegantbitecateringstyle.css
@@ -261,9 +261,15 @@ header
     text-decoration: none;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     font-family: Arial;
-    margin: 0;
     background-size: 100%;
     background-attachment: fixed;
     background-image: url("https://images.unsplash.com/photo-1518619745898-93e765966dcd?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2F0ZXJpbmd8ZW58MHx8MHx8fDA%3D");
@@ -402,9 +408,15 @@ body {
     font-size: 50px;
 }
 
+.main-content {
+    flex: 1;
+}
+
 footer
 {
-    background-color: rgb(179, 179, 179);
+    background-color: rgb(116, 117, 116);
+    text-align: center;
+    padding: 10px 0;
     padding-top: 10%;
     padding-bottom: 5%;
     white-space: nowrap;
@@ -501,5 +513,5 @@ footer
 
 .copy-container
 {
-    padding-left: 4.6%;
+    padding-left: 0%;
 }
