--- a/css/fattoamano.css
+++ b/css/fattoamano.css
@@ -238,7 +238,7 @@
 body
 {
     margin: 0;
-    background-image: url("https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/DDPhotos_Aug2_2025/Header_Fatto%20a%20Mano%20Wood%20Fire%20Pizza.jpg")
+    background-image: url("https://github.com/Elegantbitecatering/elegantbitecatering/blob/main/img/DDPhotos_Aug2_2025/Header_Fatto%20a%20Mano%20Wood%20Fire%20Pizza.jpg?raw=true")
 }
 .b1
 {
@@ -446,4 +446,5 @@ footer
 .copy-container a {
     text-decoration: none;
 }
+
 
